force-app/main/default/objects/OLF_EmailTemplate__mdt/OLF_EmailTemplate__mdt.object-meta.xml
<CustomObject>
    <label>OLF Email Template</label>
    <pluralLabel>OLF Email Templates</pluralLabel>
</CustomObject>