force-app/main/default/objects/OLF_EmailTemplate__mdt/fields/EMAIL_CC__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_CC__c</fullName>
    <description>Enter emails to be sent as CC in semicolon (;) separated, e.g. abc@test.com; efz@test.com;</description>
    <inlineHelpText>Enter emails to be sent as CC in semicolon (;) separated, e.g. abc@test.com; efz@test.com;</inlineHelpText>
    <label>EMAIL CC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>