force-app/main/default/objects/OLF_EmailTemplate__mdt/fields/EMAIL_SUBJECT__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_SUBJECT__c</fullName>
    <label>EMAIL SUBJECT</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>