force-app/main/default/objects/OLF_EmailTemplate__mdt/fields/EMAIL_TEMPLATE__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_TEMPLATE__c</fullName>
    <label>EMAIL TEMPLATE</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>