force-app/main/default/objects/OLF_EmailTemplate__mdt/fields/EMAIL_TO__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_TO__c</fullName>
    <label>EMAIL TO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>