force-app/main/default/objects/OLF_EmailTemplate__mdt/fields/TABEL_HEADER__c.field-meta.xml
<CustomField>
    <fullName>TABEL_HEADER__c</fullName>
    <label>TABEL HEADER</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>