force-app/main/default/objects/OLF_EmailTemplate__mdt/validationRules/Table_Header_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Table_Header_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(TABEL_HEADER__c ) = 0</errorConditionFormula>
    <errorDisplayField>TABEL_HEADER__c</errorDisplayField>
    <errorMessage>Table Header is Required</errorMessage>
</ValidationRule>